# joelnet

./: CMakeLists.txt
include/: Data.h  Layers.h  Loss.h  NN.h  Optim.h  Tensor.h  Train.h
tests/: CMakeLists.txt  fizzbuzz.cxx  xor.cxx
